# methods

./: README.md  pyproject.toml
methods/: main.ipynb
