[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "methods"
dynamic = ["version"]
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["hatch"]

[project.urls]
Homepage = "https://github.com/faranalytics/methods"
Issues = "https://github.com/faranalytics/methods/issues"

[tool.hatch.build.targets.wheel]
packages = ["methods"]

[tool.hatch.version]
path = "__about__.py"